# nfl

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: HANDOFF_MANIFEST.md
docs/adr/: ADR-0001-db-engine.md
docs/concepts/: nfl_rag_db_concept_v0_2.md
docs/reference/: DATA_CATALOG.md  ENGINEERING_MANIFEST_v2.0.md  PROJECT_STATE.md  ROADMAP.md  UI_BACKLOG.md
src/nfl_rag_db/: audit_log.py  change_detection.py  db.py  http_download.py  ingest_nfldata.py  ingest_pbp.py  ingest_player_stats.py  run_registry.py
src/nfl_rag_db/ingest/: nfldata.py  pbp.py  player_stats.py
src/nfl_rag_db/webapp/: __init__.py  app.py  queries.py
src/nfl_rag_db/webapp/templates/: base.html  dashboard.html  datasets.html  freshness.html  game_detail.html  player_detail.html  players.html  runs.html  season_detail.html  seasons.html  team_detail.html  teams.html  week_detail.html
tests/: conftest.py  test_audit_log.py  test_change_detection.py  test_pbp_url.py  test_player_stats_key_cols.py  test_run_registry.py  test_web_app_smoke.py  test_web_queries.py  webapp_fakes.py
tools/: db_snapshot_dump.py  file_catalog_dump.py  handoff_make.py  project_audit_dump.py  project_data_snapshot.py  project_tree_dump.py  show_last_run.py  source_bundle_dump.py
