[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-rag-db"
version = "0.1.0"
description = "Local NFL data platform with DuckDB, audit-oriented ingestion, and a read-only web UI foundation"
requires-python = ">=3.10"
dependencies = [
  "duckdb>=0.10.0",
  "fastapi",
  "jinja2",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "httpx",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
